--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Alcohol vs Seat choice"
-author: "Your Name"
-date: "Fall 2020"
+author: "Kaylie Brehm"
+date: "Summer 2022"
 output: html_document
 ---
 
@@ -14,8 +14,7 @@ require(tidyverse)
 require(tigerstats)
 davisdata <- read.csv(file="UCDavis.csv")
 ```
-## Our Goal is to answer this question Is there a difference between the alcohol consumed between the row
-## you choose to sit in??
+## Our Goal is to answer this question Is there a difference between the alcohol consumed between the row you choose to sit in??
 
 ## Now with ggplot - first select the basic data
 
